--- a/pdfMaker/src/ui/generatingPDF.ui
+++ b/pdfMaker/src/ui/generatingPDF.ui
@@ -80,21 +80,21 @@
            </widget>
           </item>
           <item row="0" column="1">
-           <widget class="QLineEdit" name="lineEdit"/>
+           <widget class="QLineEdit" name="line_chartNum"/>
           </item>
           <item row="0" column="3">
-           <widget class="QLineEdit" name="lineEdit_2"/>
+           <widget class="QLineEdit" name="line_gumNum"/>
           </item>
           <item row="1" column="1">
-           <widget class="QLineEdit" name="lineEdit_3"/>
+           <widget class="QLineEdit" name="line_InspcDate"/>
           </item>
           <item row="1" column="3">
-           <widget class="QLineEdit" name="lineEdit_4"/>
+           <widget class="QLineEdit" name="line_name"/>
           </item>
          </layout>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton">
+         <widget class="QPushButton" name="btn_search">
           <property name="text">
            <string>검색</string>
           </property>
@@ -103,7 +103,7 @@
        </layout>
       </item>
       <item row="5" column="1">
-       <widget class="QPushButton" name="pushButton_2">
+       <widget class="QPushButton" name="btn_generatePDF">
         <property name="text">
          <string>PDF생성</string>
         </property>
@@ -125,7 +125,25 @@
      <height>20</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuMenu">
+    <property name="title">
+     <string>Menu</string>
+    </property>
+    <addaction name="actionGenerate_PDF"/>
+    <addaction name="actionModify_Index"/>
+   </widget>
+   <addaction name="menuMenu"/>
   </widget>
+  <action name="actionGenerate_PDF">
+   <property name="text">
+    <string>Generating PDF</string>
+   </property>
+  </action>
+  <action name="actionModify_Index">
+   <property name="text">
+    <string>Editing Index values</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
